html - ptbr e css

--- a/P4PG138 - Tiago.html
+++ b/P4PG138 - Tiago.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -87,7 +87,7 @@
         <div class="QuadradoDeBaixo">
             <table>
                 <caption>
-                    Total a pagar em Dinheiro (Cédulas isoladas) R$: <span>oi</span>
+                    Total a pagar em Dinheiro (Cédulas isoladas) R$: <span>ValorTotalAqui</span>
                 </caption>
                 <th><img src="img/UmReal.PNG"></th>
                 <th><img src="img/doisReais.PNG"></th>
