--- a/P4PG138 -.html
+++ b/P4PG138 -.html
@@ -71,7 +71,9 @@
                         Quantidade de Hora Trabalhada:
                     </td>
                     <td align="center">
-                        <h3 class="totalHoraTrabalhada">-</h3>
+                        <!--<h3 class="totalHoraTrabalhada">-</h3>-->
+                        <h3 class="totalHoraTrabalhada1">-</h3>
+
                     </td>
                 </tr>
                 <tr>
@@ -87,7 +89,7 @@
         <div class="QuadradoDeBaixo">
             <table>
                 <caption>
-                    Total a pagar em Dinheiro (Cédulas isoladas) R$: <span>ValorTotalAqui</span>
+                    Total a pagar em Dinheiro (Cédulas isoladas) R$: <span class="valorTotalAqui">ValorTotalAqui</span>
                 </caption>
                 <th><img src="img/UmReal.PNG"></th>
                 <th><img src="img/doisReais.PNG"></th>
