--- a/P4PG138 - Tiago.html
+++ b/P4PG138 - Tiago.html
@@ -49,7 +49,8 @@
             </table><br>
             <center>
                 <input type="button" value="Acrescentar" name="Acrescentar" onclick="acrescentar()">
-                <input type="reset" value="Retirar" name="Decrementar" onclick="decrementar()"></center>
+                <input type="reset" value="Retirar" name="Decrementar" onclick="decrementar()">
+            </center>
         </div>
         <div class="QuadradoADireita">
             <!--Quadrado Direito-->
@@ -89,7 +90,7 @@
         <div class="QuadradoDeBaixo">
             <table>
                 <caption>
-                    Total a pagar em Dinheiro (Cédulas isoladas) R$: <span class="valorTotalAqui">ValorTotalAqui</span>
+                    Total a pagar em Dinheiro R$: <span class="valorTotalAqui"></span>
                 </caption>
                 <th><img src="img/UmReal.PNG"></th>
                 <th><img src="img/doisReais.PNG"></th>
@@ -100,25 +101,25 @@
                 <th><img src="img/CemReais.PNG"></th>
                 <tr>
                     <td>
-                        <h3 align="center" class="pagar_1real">pago em real</h3>
+                        <h3 align="center" class="pagar_1real">-</h3>
                     </td>
                     <td>
-                        <h3 align="center" class="pagar_2real">pago em 2real</h3>
+                        <h3 align="center" class="pagar_2real">-</h3>
                     </td>
                     <td>
-                        <h3 align="center" class="pagar_5real">pago em 5real</h3>
+                        <h3 align="center" class="pagar_5real">-</h3>
                     </td>
                     <td>
-                        <h3 align="center" class="pagar_10real">pago em 10real</h3>
+                        <h3 align="center" class="pagar_10real">-</h3>
                     </td>
                     <td>
-                        <h3 align="center" class="pagar_20real">pago em 20real</h3>
+                        <h3 align="center" class="pagar_20real">-</h3>
                     </td>
                     <td>
-                        <h3 align="center" class="pagar_50real">pago em 50real</h3>
+                        <h3 align="center" class="pagar_50real">-</h3>
                     </td>
                     <td>
-                        <h3 align="center" class="pagar_100real">pago em 100real</h3>
+                        <h3 align="center" class="pagar_100real">-</h3>
                     </td>
 
                 </tr>
